--- a/en.html
+++ b/en.html
@@ -80,7 +80,7 @@
               <a href="#about"><b>About</b></a>
             </li>
             <li style="min-width: 50px">
-              <a href="#landscaping"><b>Service</b></a>
+              <a href="#landscaping"><b>Services</b></a>
             </li>
             <li>
               <a href="gallery/projects.html"><b>Gallery</b></a>
@@ -118,7 +118,7 @@
         <!-- Interior -->
         <article id="landscaping">
           <center>
-            <h1 class="major">Service</h1>
+            <h1 class="major">Services</h1>
 
             <ul style="text-align: left; max-width: 90%">
               <li>Lawn mowing</li>
@@ -190,7 +190,7 @@
             </div>
             <br />
             <div class="field">
-              <label for="demo-category">Service</label>
+              <label for="demo-category">Services</label>
               <div class="select-wrapper">
                 <select name="category" id="demo-category">
                   <option value="">-</option>
