--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <a href="#service"><b>Services</b></a>
             </li>
             <li>
-              <a href="gallery/projectsfr.html"><b>Galerie</b></a>
+              <a href="gallery/projectsfr.html"><b>Réalisations</b></a>
             </li>
             <li>
               <a style="padding: 0 0.2rem 0 0.2rem" href="#contact"><b>Nous joindre</b></a>
@@ -197,7 +197,6 @@
               <div class="select-wrapper">
                 <select name="category" id="demo-category">
                   <option value="">-</option>
-
                   <option value="lawn_mowing">Tonte de gazon</option>
                   <option value="trimming_hedges_shrubs">Taille de haies et arbustes</option>
                   <option value="cutting_lawn_edges">Coupe de bordures de gazon</option>
@@ -234,7 +233,7 @@
             <b>Téléphone:</b> 1-514-996-1221
             <br />
             <b>Courriel:</b> info@a1gazon.com <br /> <br />
-            <b>Hours:</b>  <br />
+            <b>Heures d'ouverture:</b>  <br />
             Lundi (8h à 17h) <br />
             Mardi (8h à 17h) <br />
             Mercredi (8h à 17h) <br />
