--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
               <a href="#service"><b>Services</b></a>
             </li>
             <li>
-              <a href="gallery/projectsfr.html"><b>Réalisations</b></a>
+              <a style="padding: 0 0.2rem 0 0.2rem; letter-spacing: 0.1rem;" href="gallery/projectsfr.html"><b>Réalisations</b></a>
             </li>
             <li>
-              <a style="padding: 0 0.2rem 0 0.2rem" href="#contact"><b>Nous joindre</b></a>
+              <a style="padding: 0 0.2rem 0 0.2rem; letter-spacing: 0.1rem;" href="#contact"><b>Nous joindre</b></a>
             </li>
           </ul>
         </nav>
