--- a/index.html
+++ b/index.html
@@ -277,6 +277,9 @@
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11106240285"></script> 
+    <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11106240285'); </script> 
+
     <script>
       window.onload = function () {
         function changeImage() {
