Added second gallary

--- a/en.html
+++ b/en.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>A1 Gazon</title>
+    <title>Entretien Paysager A1</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="A1 Gazon fournit des services d’entretien de votre pelouse et terrain depuis 2015. Nous nous spécialisons dans les services d’entretien des terrains résidentiels et commerciaux. Nos services offerts sont : tonte de gazon, taille de haies et arbustes, ouverture et fermeture de terrain, coupe de bordures de gazon, ramassage des feuilles et débris, entretien des plates bandes, balais mécanique pour nettoyage printanier de gravel (stationnement et entrée privée)." />
