--- a/gallery/projectsfr-mowing.html
+++ b/gallery/projectsfr-mowing.html
@@ -16,7 +16,7 @@
 			gtag('config', 'UA-163220302-1');
 		</script>
 
-		<title>A1 Gazon</title>  
+		<title>A1 Gazon.</title>  
 		<meta charset="utf-8" />
 		<meta name="description" content="Residential and commercial painting in Montreal area" />	
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -31,12 +31,15 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="../en.html"><strong>A1 Gazon</strong></a></h1>
+						<a href="../en.html" class="icon solid fa-arrow-circle-left d-none-mobile" style="color: #FFF;"> Retour</a>
+	
 						<nav>
 							<ul>
-								<li><a href="../en.html" class="icon solid fa-arrow-circle-left">Back</a></li>
+								<li><a href="../projectsfr-mowing.html" class="icon solid" style="font-size: 12px;">Tonte de pelouse</a></li>
+								<li><a href="../projectsfr-trim.html" class="icon solid" style="font-size: 12px;">Taille des haies et arbustes</a></li>
 							</ul>
 						</nav>
+	
 					</header>
 
 				<!-- Main -->
@@ -86,7 +89,7 @@
 							
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
+							<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/13.jpg" alt="" /></a>
 						</article>
 						<!-- <article class="thumb">
 							<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/13.jpg" alt="" /></a>
@@ -107,12 +110,6 @@
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/18.jpg" class="image"><img src="images/thumbs/18.jpg" alt="" /></a>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/19.jpg" class="image"><img src="images/thumbs/19.jpg" alt="" /></a>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/20.jpg" class="image"><img src="images/thumbs/20.jpg" alt="" /></a>
 						</article> -->
 					</div>
 
