--- a/gallery/projectsfr-trim.html
+++ b/gallery/projectsfr-trim.html
@@ -30,14 +30,17 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<h1><a href="../index.html"><strong>A1 Gazon</strong></a></h1>
-						<nav>
-							<ul>
-								<li><a href="../index.html" class="icon solid fa-arrow-circle-left">Retour</a></li>
-							</ul>
-						</nav>
-					</header>
+				<header id="header">
+					<a href="../en.html" class="icon solid fa-arrow-circle-left d-none-mobile" style="color: #FFF;"> Retour</a>
+
+					<nav>
+						<ul>
+							<li><a href="../projectsfr-mowing.html" class="icon solid" style="font-size: 12px;">Tonte de pelouse</a></li>
+							<li><a href="../projectsfr-trim.html" class="icon solid" style="font-size: 12px;">Taille des haies et arbustes</a></li>
+						</ul>
+					</nav>
+
+				</header>
 
 				<!-- Main -->
 					<div id="main">
