--- a/en.html
+++ b/en.html
@@ -83,7 +83,7 @@
               <a href="#landscaping"><b>Services</b></a>
             </li>
             <li>
-              <a href="gallery/projects.html"><b>Gallery</b></a>
+              <a href="gallery/projects-mowing.html"><b>Gallery</b></a>
             </li>
             <li>
               <a href="#contact"><b>Contact</b></a>
