--- a/gallery/projects-mowing.html
+++ b/gallery/projects-mowing.html
@@ -35,8 +35,8 @@
 
 						<nav>
 							<ul>
-								<li><a href="../projects-mowing.html" class="icon solid ">Lawn Mowing</a></li>
-								<li><a href="../projects-trim.html" class="icon solid ">Trimming</a></li>
+								<li><a href="../gallery/projects-mowing.html" class="icon solid ">Lawn Mowing</a></li>
+								<li><a href="../gallery/projects-trim.html" class="icon solid ">Trimming</a></li>
 							</ul>
 						</nav>
 					</header>
