--- a/gallery/projects-trim.html
+++ b/gallery/projects-trim.html
@@ -35,8 +35,8 @@
 
 						<nav>
 							<ul>
-								<li><a href="../projects-mowing.html" class="icon solid ">Lawn Mowing</a></li>
-								<li><a href="../projects-trim.html" class="icon solid ">Trimming</a></li>
+								<li><a href="../gallery/projects-mowing.html" class="icon solid ">Lawn Mowing</a></li>
+								<li><a href="../gallery/projects-trim.html" class="icon solid ">Trimming</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -50,35 +50,34 @@
 							<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
+							<a href="images/fulls/16.jpg" class="image"><img src="images/thumbs/16.jpg" alt="" /></a>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
+							<a href="images/fulls/17.jpg" class="image"><img src="images/thumbs/17.jpg" alt="" /></a>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
+							<a href="images/fulls/18.jpg" class="image"><img src="images/thumbs/18.jpg" alt="" /></a>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
-						</article>
-
-						<article class="thumb">
-							<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
+							<a href="images/fulls/19.jpg" class="image"><img src="images/thumbs/19.jpg" alt="" /></a>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
+							<a href="images/fulls/20.jpg" class="image"><img src="images/thumbs/20.jpg" alt="" /></a>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
+							<a href="images/fulls/21.jpg" class="image"><img src="images/thumbs/21.jpg" alt="" /></a>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/16.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/17.jpg" class="image"><img src="images/thumbs/17.jpg" alt="" /></a>
 						</article>
 					</div>
 
