--- a/gallery/projectsfr-mowing.html
+++ b/gallery/projectsfr-mowing.html
@@ -35,8 +35,8 @@
 	
 						<nav>
 							<ul>
-								<li><a href="../projectsfr-mowing.html" class="icon solid" style="font-size: 12px;">Tonte de pelouse</a></li>
-								<li><a href="../projectsfr-trim.html" class="icon solid" style="font-size: 12px;">Taille des haies et arbustes</a></li>
+								<li><a href="../gallery/projectsfr-mowing.html" class="icon solid" style="font-size: 12px;">Tonte de pelouse</a></li>
+								<li><a href="../gallery/projectsfr-trim.html" class="icon solid" style="font-size: 12px;">Taille des haies et arbustes</a></li>
 							</ul>
 						</nav>
 	
