--- a/gallery/projectsfr-trim.html
+++ b/gallery/projectsfr-trim.html
@@ -35,53 +35,52 @@
 
 					<nav>
 						<ul>
-							<li><a href="../projectsfr-mowing.html" class="icon solid" style="font-size: 12px;">Tonte de pelouse</a></li>
-							<li><a href="../projectsfr-trim.html" class="icon solid" style="font-size: 12px;">Taille des haies et arbustes</a></li>
+							<li><a href="../gallery/projectsfr-mowing.html" class="icon solid" style="font-size: 12px;">Tonte de pelouse</a></li>
+							<li><a href="../gallery/projectsfr-trim.html" class="icon solid" style="font-size: 12px;">Taille des haies et arbustes</a></li>
 						</ul>
 					</nav>
 
 				</header>
 
 				<!-- Main -->
-					<div id="main">
-						<article class="thumb">
-							<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
-						</article>
-						
-						<article class="thumb">
-							<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
-						</article>
-					</div>
+				<div id="main">
+					<article class="thumb">
+						<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
+					</article>
+					<article class="thumb">
+						<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
+					</article>
+					<article class="thumb">
+						<a href="images/fulls/16.jpg" class="image"><img src="images/thumbs/16.jpg" alt="" /></a>
+					</article>
+					<article class="thumb">
+						<a href="images/fulls/17.jpg" class="image"><img src="images/thumbs/17.jpg" alt="" /></a>
+					</article>
+					<article class="thumb">
+						<a href="images/fulls/18.jpg" class="image"><img src="images/thumbs/18.jpg" alt="" /></a>
+					</article>
+					<article class="thumb">
+						<a href="images/fulls/19.jpg" class="image"><img src="images/thumbs/19.jpg" alt="" /></a>
+					</article>
+					<article class="thumb">
+						<a href="images/fulls/20.jpg" class="image"><img src="images/thumbs/20.jpg" alt="" /></a>
+					</article>
+					<article class="thumb">
+						<a href="images/fulls/21.jpg" class="image"><img src="images/thumbs/21.jpg" alt="" /></a>
+					</article>
+					<article class="thumb">
+						<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
+					</article>
+					<article class="thumb">
+						<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
+					</article>
+					<article class="thumb">
+						<a href="images/fulls/16.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
+					</article>
+					<article class="thumb">
+						<a href="images/fulls/17.jpg" class="image"><img src="images/thumbs/17.jpg" alt="" /></a>
+					</article>
+				</div>
 
 		
 
