Final updates 4 new images & name changes

--- a/en.html
+++ b/en.html
@@ -9,7 +9,7 @@
     <title>Entretien Paysager A1</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="A1 Gazon fournit des services d’entretien de votre pelouse et terrain depuis 2015. Nous nous spécialisons dans les services d’entretien des terrains résidentiels et commerciaux. Nos services offerts sont : tonte de gazon, taille de haies et arbustes, ouverture et fermeture de terrain, coupe de bordures de gazon, ramassage des feuilles et débris, entretien des plates bandes, balais mécanique pour nettoyage printanier de gravel (stationnement et entrée privée)." />
+    <meta name="description" content="Entretien Paysager A1 fournit des services d’entretien de votre pelouse et terrain depuis 2015. Nous nous spécialisons dans les services d’entretien des terrains résidentiels et commerciaux. Nos services offerts sont : tonte de gazon, taille de haies et arbustes, ouverture et fermeture de terrain, coupe de bordures de gazon, ramassage des feuilles et débris, entretien des plates bandes, balais mécanique pour nettoyage printanier de gravel (stationnement et entrée privée)." />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="icon" href="images/favicon.ico" type="image/png" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -99,12 +99,12 @@
           <center>
             <h1 class="major">About</h1>
             <p style="text-align: left">
-              A1 Gazon has been providing your lawn and garden maintenance services since 2015. What
+              Entretien Paysager A1 has been providing your lawn and garden maintenance services since 2015. What
               has made us grow exponentially since then, is the distinction of our superior service,
               our attentiveness and our duty to satisfy each of our customers. We assure you peace
               of mind from those tasks that overload your busy daily schedule. Our professional and
               dynamic team performs maintenance work with meticulousness, efficiency and respect of
-              your environment. We are proud of our company's values. A1 Gazon specializes in
+              your environment. We are proud of our company's values. Entretien Paysager A1 specializes in
               residential and commercial maintenance services.
             </p>
             <!-- <img
@@ -250,7 +250,7 @@
           </li>
         </ul> -->
         <p class="copyright">
-          <strong>&copy; A1 Gazon</strong>
+          <strong>&copy; Entretien Paysager A1</strong>
         </p>
       </footer>
     </div>
