--- a/gallery/projects-trim.html
+++ b/gallery/projects-trim.html
@@ -16,7 +16,7 @@
 			gtag('config', 'UA-163220302-1');
 		</script>
 
-		<title>A1 Gazon</title>  
+		<title>Entretien Paysager A1</title>  
 		<meta charset="utf-8" />
 		<meta name="description" content="Residential and commercial painting in Montreal area" />	
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -68,16 +68,16 @@
 							<a href="images/fulls/21.jpg" class="image"><img src="images/thumbs/21.jpg" alt="" /></a>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
+							<a href="images/fulls/22.jpg" class="image"><img src="images/thumbs/22.jpg" alt="" /></a>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
+							<a href="images/fulls/23.jpg" class="image"><img src="images/thumbs/23.jpg" alt="" /></a>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/16.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
+							<a href="images/fulls/24.jpg" class="image"><img src="images/thumbs/24.jpg" alt="" /></a>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/17.jpg" class="image"><img src="images/thumbs/17.jpg" alt="" /></a>
+							<a href="images/fulls/25.jpg" class="image"><img src="images/thumbs/25.jpg" alt="" /></a>
 						</article>
 					</div>
 
