--- a/gallery/projectsfr-mowing.html
+++ b/gallery/projectsfr-mowing.html
@@ -16,7 +16,7 @@
 			gtag('config', 'UA-163220302-1');
 		</script>
 
-		<title>A1 Gazon.</title>  
+		<title>Entretien Paysager A1</title>  
 		<meta charset="utf-8" />
 		<meta name="description" content="Residential and commercial painting in Montreal area" />	
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
