--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Entretien Paysager A1</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="A1 Gazon fournit des services d’entretien de votre pelouse et terrain depuis 2015. Nous nous spécialisons dans les services d’entretien des terrains résidentiels et commerciaux. Nos services offerts sont : tonte de gazon, taille de haies et arbustes, ouverture et fermeture de terrain, coupe de bordures de gazon, ramassage des feuilles et débris, entretien des plates bandes, balais mécanique pour nettoyage printanier de gravel (stationnement et entrée privée)." />
+    <meta name="description" content="Entretien Paysager A1 fournit des services d’entretien de votre pelouse et terrain depuis 2015. Nous nous spécialisons dans les services d’entretien des terrains résidentiels et commerciaux. Nos services offerts sont : tonte de gazon, taille de haies et arbustes, ouverture et fermeture de terrain, coupe de bordures de gazon, ramassage des feuilles et débris, entretien des plates bandes, balais mécanique pour nettoyage printanier de gravel (stationnement et entrée privée)." />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="icon" href="images/favicon.ico" type="image/png" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -101,13 +101,13 @@
           <center>
             <h1 class="major">À propos</h1>
             <p style="text-align: left">
-              A1 Gazon fournit des services d’entretien de votre pelouse et terrain depuis 2015. Ce
+              Entretien Paysager A1 fournit des services d’entretien de votre pelouse et terrain depuis 2015. Ce
               qui nous a fait croître exponentiellement depuis, c’est la distinction de notre
               service de qualité supérieure, notre écoute et notre devoir de satisfaire chacun de
               nos client(e)s. Nous vous assurons la paix d’esprit de ces tâches qui surchargent vos
               horaires occupés du quotidien. Notre équipe professionnelle et dynamique, effectue les
               travaux d’entretien avec minutie, efficacité et respect de votre environnement. Nous
-              sommes fiers des valeurs de notre entreprise. A1 Gazon se spécialise dans les services
+              sommes fiers des valeurs de notre entreprise. Entretien Paysager A1 se spécialise dans les services
               d’entretien des terrains résidentiels et commerciaux.
             </p>
             <!-- <img
@@ -260,7 +260,7 @@
           </li>
         </ul> -->
         <p class="copyright">
-          <strong>&copy; A1 Gazon</strong>
+          <strong>&copy; Entretien Paysager A1</strong>
         </p>
       </footer>
     </div>
