--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           <p>
             <b>Téléphone:</b> 1-514-996-1221
             <br />
-            <b>Courriel:</b> info@a1gazon.com <br /> <br />
+            <b>Courriel:</b> info@entretienpaysagera1.com <br /> <br />
             <b>Heures d'ouverture:</b>  <br />
             Lundi (8h à 17h) <br />
             Mardi (8h à 17h) <br />
