--- a/en.html
+++ b/en.html
@@ -231,6 +231,7 @@
             Thursday (8am to 5pm) <br />
             Friday (8am to 5pm) <br />
             Saturday (9am to 2pm)
+            Sunday (9am to 2pm)
           <center>
         </article>
       </div>
