--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
             Jeudi (8h à 17h) <br />
             Vendredi (8h à 17h) <br />
             Samedi (9h à 14h)
+            Dimanche (9h à 14h)
           </p>
         </center>
         </article>
