--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
 -->
 <html>
   <head>
-    <title>Entretien Paysager A1</title>
+    <title>Entretien Paysager A1 | Entretien de Pelouse Montréal</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="description" content="Depuis 2015, Entretien Paysager A1 se distingue par son expertise en entretien de pelouses et d’espaces extérieurs, tant pour les propriétés résidentielles que commerciales. Forts de plus de 17 ans d’expérience, nous mettons un point d’honneur à offrir des services de haute qualité, adaptés à vos besoins spécifiques, pour maintenir vos terrains en parfait état tout au long de l'année. Nos services incluent : Tonte de gazon et coupe de bordures, taille de haies et arbustes, ouverture et fermeture de terrain, coupe de bordures de gazon, ramassage des feuilles et débris, entretien des plates-bandes, et balayage mécanique pour nettoyage printanier de gravier (stationnements). Chez Entretien Paysager A1, nous nous engageons à offrir un service fiable, professionnel et personnalisé, afin de garantir la satisfaction totale de nos clients. Que ce soit pour une intervention ponctuelle ou un entretien régulier, vous pouvez compter sur nous pour prendre soin de votre espace extérieur avec professionnalisme et attention aux détails." />
+    <meta name="keywords" content="entretien de gazon entretien paysager Montréal, entretien pelouse Montréal, tonte de gazon professionnel, entretien terrain résidentiel, entretien terrain commercial, taille de haies, entretien arbustes, coupe bordures gazon, ramassage feuilles, nettoyage terrain, plates-bandes entretien, ouverture fermeture terrain, balai mécanique stationnement, nettoyage gravel printanier" />
+    <meta name="author" content="Entretien Paysager A1" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Entretien Paysager A1 | Services d'Entretien de Pelouse à Montréal" />
+    <meta property="og:description" content="Services professionnels d'entretien de pelouse et terrain à Montréal depuis 2015. Tonte, taille, nettoyage et plus pour propriétés résidentielles et commerciales." />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="fr_CA" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="icon" href="images/favicon.ico" type="image/png" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -17,6 +24,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"
     />
+    <link rel="canonical" href="https://www.entretienpaysagera1.com/" />
   </head>
   <body class="is-preload">
     <!-- Wrapper -->
