Added Google Tracking

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Entretien Paysager A1 | Entretien de Pelouse Montréal</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="Depuis 2015, Entretien Paysager A1 se distingue par son expertise en entretien de pelouses et d’espaces extérieurs, tant pour les propriétés résidentielles que commerciales. Forts de plus de 17 ans d’expérience, nous mettons un point d’honneur à offrir des services de haute qualité, adaptés à vos besoins spécifiques, pour maintenir vos terrains en parfait état tout au long de l'année. Nos services incluent : Tonte de gazon et coupe de bordures, taille de haies et arbustes, ouverture et fermeture de terrain, coupe de bordures de gazon, ramassage des feuilles et débris, entretien des plates-bandes, et balayage mécanique pour nettoyage printanier de gravier (stationnements). Chez Entretien Paysager A1, nous nous engageons à offrir un service fiable, professionnel et personnalisé, afin de garantir la satisfaction totale de nos clients. Que ce soit pour une intervention ponctuelle ou un entretien régulier, vous pouvez compter sur nous pour prendre soin de votre espace extérieur avec professionnalisme et attention aux détails." />
+    <meta name="description" content="Depuis 2015, Entretien Paysager A1 se distingue par son expertise en entretien de pelouses et d'espaces extérieurs, tant pour les propriétés résidentielles que commerciales. Forts de plus de 17 ans d'expérience, nous mettons un point d'honneur à offrir des services de haute qualité, adaptés à vos besoins spécifiques, pour maintenir vos terrains en parfait état tout au long de l'année. Nos services incluent : Tonte de gazon et coupe de bordures, taille de haies et arbustes, ouverture et fermeture de terrain, coupe de bordures de gazon, ramassage des feuilles et débris, entretien des plates-bandes, et balayage mécanique pour nettoyage printanier de gravier (stationnements). Chez Entretien Paysager A1, nous nous engageons à offrir un service fiable, professionnel et personnalisé, afin de garantir la satisfaction totale de nos clients. Que ce soit pour une intervention ponctuelle ou un entretien régulier, vous pouvez compter sur nous pour prendre soin de votre espace extérieur avec professionnalisme et attention aux détails." />
     <meta name="keywords" content="entretien de gazon entretien paysager Montréal, entretien pelouse Montréal, tonte de gazon professionnel, entretien terrain résidentiel, entretien terrain commercial, taille de haies, entretien arbustes, coupe bordures gazon, ramassage feuilles, nettoyage terrain, plates-bandes entretien, ouverture fermeture terrain, balai mécanique stationnement, nettoyage gravel printanier" />
     <meta name="author" content="Entretien Paysager A1" />
     <meta name="robots" content="index, follow" />
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="icon" href="images/favicon.ico" type="image/png" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11106240285"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-11106240285'); </script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"
@@ -109,14 +110,14 @@
           <center>
             <h1 class="major">À propos</h1>
             <p style="text-align: left">
-              Entretien Paysager A1 fournit des services d’entretien de votre pelouse et terrain depuis 2015. Ce
-              qui nous a fait croître exponentiellement depuis, c’est la distinction de notre
+              Entretien Paysager A1 fournit des services d'entretien de votre pelouse et terrain depuis 2015. Ce
+              qui nous a fait croître exponentiellement depuis, c'est la distinction de notre
               service de qualité supérieure, notre écoute et notre devoir de satisfaire chacun de
-              nos client(e)s. Nous vous assurons la paix d’esprit de ces tâches qui surchargent vos
+              nos client(e)s. Nous vous assurons la paix d'esprit de ces tâches qui surchargent vos
               horaires occupés du quotidien. Notre équipe professionnelle et dynamique, effectue les
-              travaux d’entretien avec minutie, efficacité et respect de votre environnement. Nous
+              travaux d'entretien avec minutie, efficacité et respect de votre environnement. Nous
               sommes fiers des valeurs de notre entreprise. Entretien Paysager A1 se spécialise dans les services
-              d’entretien des terrains résidentiels et commerciaux.
+              d'entretien des terrains résidentiels et commerciaux.
             </p>
             <!-- <img
               src="images/about.jpg"
@@ -305,6 +306,18 @@
         }
         window.setInterval(changeImage, 6500);
       };
+    </script>
+
+    <!-- Conversion Tracking Code for Form Submissions -->
+    <script>
+      // Find the form
+      document.querySelector('form[action="https://formspree.io/f/xgebvwwk"]').addEventListener('submit', function() {
+        // Track the conversion
+        gtag('event', 'conversion', {
+          'send_to': 'AW-11106240285/-bFoCM-u57EaEJ2O768p'
+        });
+        // No need to preventDefault or delay - let Formspree handle the submission normally
+      });
     </script>
 
     <style type="text/css">
