Added metadata for english version

--- a/en.html
+++ b/en.html
@@ -6,17 +6,47 @@
 -->
 <html>
   <head>
-    <title>Entretien Paysager A1</title>
+    <title>Entretien Paysager A1 | Lawn Maintenance Montreal</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="Entretien Paysager A1 fournit des services d’entretien de votre pelouse et terrain depuis 2015. Nous nous spécialisons dans les services d’entretien des terrains résidentiels et commerciaux. Nos services offerts sont : tonte de gazon, taille de haies et arbustes, ouverture et fermeture de terrain, coupe de bordures de gazon, ramassage des feuilles et débris, entretien des plates bandes, balais mécanique pour nettoyage printanier de gravel (stationnement et entrée privée)." />
+    <meta
+      name="description"
+      content="Entretien Paysager A1 fournit des services d'entretien de votre pelouse et terrain depuis 2015. Nous nous spécialisons dans les services d'entretien des terrains résidentiels et commerciaux. Nos services offerts sont : tonte de gazon, taille de haies et arbustes, ouverture et fermeture de terrain, coupe de bordures de gazon, ramassage des feuilles et débris, entretien des plates bandes, balais mécanique pour nettoyage printanier de gravel (stationnement et entrée privée)."
+    />
+    <meta
+      name="keywords"
+      content="lawn maintenance Montreal, lawn care services, professional lawn mowing, residential lawn maintenance, commercial lawn maintenance, hedge trimming, shrub maintenance, lawn edge cutting, leaf removal, garden bed maintenance, spring cleanup Montreal"
+    />
+    <meta name="author" content="Entretien Paysager A1" />
+    <meta name="robots" content="index, follow" />
+    <meta
+      property="og:title"
+      content="Entretien Paysager A1 | Lawn Maintenance Services in Montreal"
+    />
+    <meta
+      property="og:description"
+      content="Professional lawn and property maintenance services in Montreal since 2015. Mowing, trimming, cleaning and more for residential and commercial properties."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_CA" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="icon" href="images/favicon.ico" type="image/png" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11106240285"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'AW-11106240285');
+    </script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"
     />
+    <link rel="canonical" href="https://www.entretienpaysagera1.com/en.html" />
   </head>
   <body class="is-preload">
     <!-- Wrapper -->
@@ -99,13 +129,13 @@
           <center>
             <h1 class="major">About</h1>
             <p style="text-align: left">
-              Entretien Paysager A1 has been providing your lawn and garden maintenance services since 2015. What
-              has made us grow exponentially since then, is the distinction of our superior service,
-              our attentiveness and our duty to satisfy each of our customers. We assure you peace
-              of mind from those tasks that overload your busy daily schedule. Our professional and
-              dynamic team performs maintenance work with meticulousness, efficiency and respect of
-              your environment. We are proud of our company's values. Entretien Paysager A1 specializes in
-              residential and commercial maintenance services.
+              Entretien Paysager A1 has been providing your lawn and garden maintenance services
+              since 2015. What has made us grow exponentially since then, is the distinction of our
+              superior service, our attentiveness and our duty to satisfy each of our customers. We
+              assure you peace of mind from those tasks that overload your busy daily schedule. Our
+              professional and dynamic team performs maintenance work with meticulousness,
+              efficiency and respect of your environment. We are proud of our company's values.
+              Entretien Paysager A1 specializes in residential and commercial maintenance services.
             </p>
             <!-- <img
               src="images/about.jpg"
@@ -163,11 +193,12 @@
 
         <!-- Estimation -->
         <article id="estimation">
-          <center><h1 class="major">Estimation</h1></center> 
+          <center><h1 class="major">Estimation</h1></center>
           <p>
-          Call       
-          <a href="tel:1-514-996-1221">514-996-1221</a>
-          or send us a message using the form below:</p>
+            Call
+            <a href="tel:1-514-996-1221">514-996-1221</a>
+            or send us a message using the form below:
+          </p>
           <form method="post" action="https://formspree.io/f/mqaevnnv">
             <div class="field half first">
               <label for="name">Name</label>
@@ -223,16 +254,16 @@
           <center>
             <b>Phone:</b> 1-514-996-1221
             <br />
-            <b>Email:</b> info@entretienpaysagera1.com <br /> <br />
-            <b>Hours:</b>  <br />
+            <b>Email:</b> info@entretienpaysagera1.com <br />
+            <br />
+            <b>Hours:</b> <br />
             Monday (8am to 5pm) <br />
             Tuesday (8am to 5pm) <br />
             Wednesday (8am to 5pm) <br />
             Thursday (8am to 5pm) <br />
             Friday (8am to 5pm) <br />
-            Saturday (9am to 2pm)
-            Sunday (9am to 2pm)
-          <center>
+            Saturday (9am to 2pm) Sunday (9am to 2pm)
+          </center>
         </article>
       </div>
 
@@ -267,6 +298,20 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+
+    <!-- Conversion Tracking Code for Form Submissions -->
+    <script>
+      // Find the form
+      document
+        .querySelector('form[action="https://formspree.io/f/mqaevnnv"]')
+        .addEventListener('submit', function () {
+          // Track the conversion
+          gtag('event', 'conversion', {
+            send_to: 'AW-11106240285/-bFoCM-u57EaEJ2O768p',
+          });
+          // No need to preventDefault or delay - let Formspree handle the submission normally
+        });
+    </script>
 
     <script>
       window.onload = function () {
